@@ -58,7 +58,7 @@ public:
   virtual int close (u_long);
 
 private:
-  /// Pointer to protocsol specific code that does the bunch of the
+  /// Pointer to protocol specific code that does the bunch of the
   /// job.
   TAO_Connection_Handler *ch_;
 };
