@@ -157,8 +157,6 @@ public:
       CORBA::TypeCode_ptr concrete_base,
       const CORBA::ValueMemberSeq &members) = 0;
 
-  // --
-
   /**
    * @name TAO-specific TypeCode factory methods.
    *
